# Castify

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
resources/icons/: icon.icns
src/: assets.rs  config.rs  lib.rs  linecounter.ps1  main.rs  movie_capture.rs  screen_capture.rs  xmacro.rs
src/capture/: capture.rs  capturer.rs  frame_pool.rs  generic.rs  mod.rs  stream.rs  traits.rs
src/capture/audio/: capture.rs  loopback.rs  mod.rs
src/capture/display/: mod.rs  selector.rs
src/capture/macos/: capture_engine.rs  pcm_buffer.rs  screen_recorder.rs
src/capture/wgc/: d3d.rs  display.rs  wgc_capture.rs
src/capture/yuv_convert/: dx_math.rs  shader.rs  yuv_converter.rs
src/decoder/: audio.rs  depacketizer.rs  ffmpeg.rs  mod.rs
src/display/: audio_buffer.rs  mod.rs  video_buffer.rs
src/encoder/: ffmpeg.rs  frame_pool.rs
src/events/: events.rs  mod.rs
src/gui/: app.rs  appbase.rs  macros.rs  mod.rs  resource.rs  runner.rs  widget.rs
src/gui/common/: anybox.rs  datastructure.rs  flags.rs  hotkeys.rs  icons.rs  messages.rs  mod.rs
src/gui/components/: annotation.rs  area_selector.rs  caster.rs  client.rs  footer.rs  home.rs  hotkeys.rs  info.rs  misc.rs  mod.rs  popup.rs  receiver.rs  recording.rs  screen_overlay.rs  screen_selector.rs  spinner.rs  start.rs
src/gui/components/awmodal/: interface.rs  manager.rs  mod.rs
src/gui/components/button/: iconbutton.rs  key.rs  mod.rs
src/gui/components/buttons/: filled.rs  key.rs  mod.rs
src/gui/components/custom/: iconbutton.rs  mod.rs
src/gui/components/raw/: mod.rs
src/gui/components/raw/screen_area/: area_selector.rs  areaselector.rs  mod.rs  style.rs  theme.rs
src/gui/components/screen_area/: area_selector.rs  mod.rs  style.rs  theme.rs
src/gui/components/video/: mod.rs  pipeline.rs  shader.wgsl  video.rs  video_player.rs
src/gui/pages/: caster.rs  footer.rs  home.rs  hotkeys.rs  info.rs  mod.rs  popup.rs  receiver.rs
src/gui/popup/: ip.rs  mod.rs  shortcuts.rs  wrtc.rs
src/gui/style/: button.rs  color.rs  container.rs  menu.rs  mod.rs  picklist.rs  scrollbar.rs  slider.rs  text.rs  textinput.rs
src/gui/style/buttons/: filled.rs  key.rs  mod.rs
src/gui/style/styles/: csx.rs  mod.rs  palette.rs
src/gui/style/theme/: color.rs  csx.rs  mod.rs  palette.rs
src/gui/theme/: areaselector.rs  button.rs  color.rs  container.rs  mod.rs  modal.rs  picklist.rs  scollbar.rs  text.rs  textinput.rs
src/gui/theme/buttons/: filled.rs  key.rs  mod.rs
src/gui/theme/styles/: buttons.rs  csx.rs  mod.rs  palette.rs
src/gui/types/: appbase.rs  icons.rs  messages.rs  mod.rs
src/gui/video/: mod.rs  pipeline.rs  video.rs  video_player.rs
src/gui/windows/: annotation.rs  area_selector.rs  main.rs  manager.rs  mod.rs
src/pipeline/: clock.rs  health.rs  mod.rs  stage.rs  state.rs  types.rs
src/pipeline/receiver/: coordinator.rs  decode_stage.rs  mod.rs  receive_stage.rs  reorder_stage.rs  sync_stage.rs
src/pipeline/sender/: capture_stage.rs  coordinator.rs  encode_stage.rs  mod.rs  transmit_stage.rs
src/utils/: bimap.rs  events.rs  flags.rs  gist.rs  helpers.rs  ipc.rs  key_listener.rs  mod.rs  monitors.rs  net.rs  options.rs  path.rs  perf.rs  sos.rs  status.rs  string.rs  text.rs  tray_icon.rs
src/utils/net/: common.rs  mod.rs  net.rs  rtp.rs  webrtc_client.rs  webrtc_common.rs  werbrtc_server.rs  xgp.rs
src/utils/net/webrtc/: caster.rs  common.rs  interfaces.rs  manual.rs  mod.rs  peer.rs  receiver.rs  server.rs  webrtc_client.rs  webrtc_common.rs  werbrtc_server.rs
src/windows/: annotation.rs  area_selector.rs  main.rs  mod.rs
src/workers/: Client.rs  caster.rs  key_listener.rs  mod.rs  receiver.rs  save_stream.rs  sos.rs  tray_icon.rs
