[package]
name = "castify"
version = "1.0.0"
authors = ["Andrea Frolli <dev.andrea.frolli@outlook.it>, Pietro Bella, Mario De Paola"]
description = "A simple cross-platform screen caster tool."
keywords = ["screen", "capture", "cast", "stream", "castify"]
documentation = "https://github.com/sh1zen/Castify"
homepage = "https://github.com/sh1zen/Castify"
license = "GPL-v3.0"
readme = "README.md"
edition = "2024"
build = "build.rs"
exclude = ["target", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# system
interprocess = { version = "2.2.3", features = ["tokio"] }
native-dialog = "0.9.0"
tray-icon = "0.21.1"
# rdev = { git = "https://github.com/fufesou/rdev" } #
rdev = { version = "0.5.3" }
ctrlc = "3.4.7"
arboard = "3.6.0"
# gui
iced = { version = "0.13.1", features = ["tokio", "wgpu", "image", "canvas"] }
iced_wgpu = "0.13.5"
iced_graphics = "0.13.0"
iced_anim = { version = "0.2.1", features = ["derive"] }
# video
gstreamer = "0.24.1"
gstreamer-app = "0.24.0"
# networking
public-ip = "0.2.2"
local-ip-address = "0.6.5"
webrtc = "0.13.0"
mdns-sd = "0.14.1"
natpmp = "0.5.0"
async-tungstenite = { version = "0.31.0", features = ["tokio-runtime"] }
# utils
castbox = "0.0.6"
async-trait = "0.1.89"
display-info = "0.5.5"
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"
futures-util = { version = "0.3.31" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
clap = { version = "4.5.45" }
once_cell = "1.21.3"
brotli = "8.0.2"


[target.'cfg(target_os="linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(target_os="windows")'.build-dependencies]
winresource = "0.1.22"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'packed'

[package.metadata.packager]
product-name = "Castify"
identifier = "app.castify.castify"
authors = ["Andrea Frolli <dev.andrea.frolli@outlook.it>, Mario De Paola <>, Pietro Bella <>"]
publisher = "Castify"
category = "Utility"
copyright = "Copyright © 2025"
formats = ["wix", "deb", "pacman", "dmg"]
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.ico", "resources/icons/96x96.png"]
out-dir = "target/packages"

[package.metadata.winresource]
ProductName = "Castify"
FileDescription = "Castify"

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.deb]
depends = ["libgtk-3-dev", "libxdo-dev"]

[package.metadata.packager.pacman]
depends = ["gtk3", "xdotool"]