[package]
name = "castify"
version = "1.0.0"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>, Pietro Bella, Mario De Paola"]
description = "A simple cross-platform screen caster tool."
keywords = ["screen", "capture", "cast", "stream", "castify"]
documentation = "https://github.com/sh1zen/Castify"
homepage = "https://github.com/sh1zen/Castify"
license = "GPL-v3.0"
readme = "README.md"
edition = "2024"
build = "build.rs"
exclude = ["target", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# system
interprocess = { version = "2.3.0", features = ["tokio"] }
native-dialog = "0.9.6"
tray-icon = "0.21.3"
# rdev = { git = "https://github.com/fufesou/rdev" } #
rdev = { version = "0.5.3" }
ctrlc = "3.5.1"
arboard = "3.6.1"
# gui
iced = { version = "0.13.1", features = ["tokio", "wgpu", "image", "canvas"] }
iced_wgpu = "0.13.5"
iced_graphics = "0.13.0"
iced_anim = { version = "0.2.1", features = ["derive"] }
# networking
public-ip = "0.2.2"
local-ip-address = "0.6.10"
webrtc = "0.17.0"
mdns-sd = "0.17.2"
natpmp = "0.5.0"
async-tungstenite = { version = "0.32.1", features = ["tokio-runtime"] }
# utils
castbox = "0.1.4"
async-trait = "0.1.89"
display-info = "0.5.7"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
futures-util = { version = "0.3.31" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
clap = { version = "4.5.57" }
once_cell = "1.21.3"
brotli = "8.0.2"
log = "0.4.29"
anyhow = "1.0.101"
ac-ffmpeg = "0.19.0"
bytes = "1.11.1"
itertools = "0.14.0"

# capture
tokio-util = "0.7.18"
cpal = "0.17.1"
widestring = "1.2.1"


[target.'cfg(target_os="linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(target_os="windows")'.build-dependencies]
winresource = "0.1.30"

[dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Devices",
    "Win32_Devices_Display",
]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'packed'

[package.metadata.packager]
product-name = "Castify"
identifier = "app.castify.castify"
authors = ["Andrea Frolli <dev.andrea.frolli@outlook.it>, Mario De Paola <>, Pietro Bella <>"]
publisher = "Castify"
category = "Utility"
copyright = "Copyright © 2025"
formats = ["wix", "deb", "pacman", "dmg"]
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.ico", "resources/icons/96x96.png"]
out-dir = "target/packages"

[package.metadata.winresource]
ProductName = "Castify"
FileDescription = "Castify"

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.deb]
depends = ["libgtk-3-dev", "libxdo-dev"]

[package.metadata.packager.pacman]
depends = ["gtk3", "xdotool"]