[package]
name = "castify"
version = "1.1.0"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>, Pietro Bella, Mario De Paola"]
description = "A simple cross-platform screen caster tool."
keywords = ["screen", "capture", "cast", "stream", "castify"]
documentation = "https://github.com/sh1zen/Castify"
homepage = "https://github.com/sh1zen/Castify"
license = "GPL-v3.0"
readme = "README.md"
edition = "2024"
build = "build.rs"
exclude = ["target", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI Framework
iced = { version = "0.14.0", features = ["tokio", "wgpu", "image", "canvas", "advanced"] }
iced_wgpu = "0.14.0"
iced_graphics = "0.14.0"
iced_anim = { version = "0.3.1", features = ["derive"] }
# Networking & WebRTC
public-ip = "0.2.2"
local-ip-address = "0.6.10"
webrtc = "0.17.1"
rtcp = "0.17.1"
mdns-sd = "0.18.0"
natpmp = "0.5.0"
async-tungstenite = { version = "0.33.0", features = ["tokio-runtime"] }
# Media Processing (Video/Audio)
ac-ffmpeg = "0.19.0"
cpal = "0.17.3"
# Async Runtime & Concurrency
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"
futures-util = { version = "0.3.32" }
# System Integration & OS APIs
interprocess = { version = "2.4.0", features = ["tokio"] }
native-dialog = "0.9.6"
tray-icon = "0.21.3"
rdev = { version = "0.5.3" }
ctrlc = "3.5.2"
arboard = "3.6.1"
display-info = "0.5.7"
widestring = "1.2.1"
# Serialization & Data Processing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
bytes = "1.11.1"
brotli = "8.0.2"
# Utilities & Helpers
castbox = "0.1.4"
chrono = "0.4.44"
clap = { version = "4.5.60" }
once_cell = "1.21.3"
log = "0.4.29"
anyhow = "1.0.102"
tracing-subscriber = "0.3.22"

# Platform-Specific Dependencies

[target.'cfg(target_os="linux")'.dependencies]
gtk = "0.18.2"

[target.'cfg(target_os="windows")'.build-dependencies]
winresource = "0.1.30"

[dependencies.windows]
version = "0.62.2"
features = [
    # Core & Foundation
    "Foundation",
    "Win32_Foundation",
    # Graphics Capture (Windows.Graphics.Capture API)
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    # Direct3D11 & DXGI (GPU acceleration)
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # GDI & DWM (Display enumeration, window transparency)
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    # WinRT Interop (Graphics Capture interop)
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # Display & DPI
    "Win32_Devices_Display",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    # Audio (WASAPI loopback for system audio capture)
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_System_Com",
]

# ============================================================================
# Build Profiles
# ============================================================================
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"

# ============================================================================
# Package Metadata
# ============================================================================
[package.metadata.packager]
product-name = "Castify"
identifier = "app.castify.castify"
authors = ["Andrea Frolli <dev.sh1zen@outlook.it>, Mario De Paola <>, Pietro Bella <>"]
publisher = "Castify"
category = "Utility"
copyright = "Copyright © 2026"
formats = ["wix", "deb", "pacman", "dmg"]
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.ico", "resources/icons/96x96.png"]
out-dir = "target/packages"

[package.metadata.winresource]
ProductName = "Castify"
FileDescription = "Castify"

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.deb]
depends = ["libgtk-3-dev", "libxdo-dev"]

[package.metadata.packager.pacman]
depends = ["gtk3", "xdotool"]
